test/corpus/fields.txt
================================================================================
Simple query selecting some fields
================================================================================

fields @timestamp, message

--------------------------------------------------------------------------------

(query
  (fields_command
    (field_name)
    (field_name)))

================================================================================
Field access with just a number
================================================================================

filter requestParameters.0.instanceId="i-abcde123"

--------------------------------------------------------------------------------

(query
  (filter_command
    (binary_exp
      (field_name)
      (string))))
