test/corpus/functions.txt
================================================================================
Function with wildcard
================================================================================

fields count(*) as counted

--------------------------------------------------------------------------------

(query
  (fields_command
    (alias
      (func_call
        (identifier)
        (args
          (wildcard)))
      (identifier))))

================================================================================
Function with multiple arguments
================================================================================

fields concat(hello, "world")

--------------------------------------------------------------------------------

(query
  (fields_command
    (func_call
      (identifier)
      (args
        (field_name)
        (string)))))
